--- a/assets/main.css
+++ b/assets/main.css
@@ -60,16 +60,16 @@ html {
 
 .octodex {
   margin: 0 auto;
-  display: inline-block;
+  text-align: center;
 }
 
 .octocat {
   display: inline-block;
-  width:30%;
+  width:26%;
   margin: 10px;
-  border-bottom: 2px solid rgb(208,208,208);
+  border-bottom: 1.5px solid rgb(208,208,208);
   margin-bottom: 10px;
-
+  margin-left: 45px;
 }
 
 .octocat img {
@@ -88,6 +88,7 @@ html {
 .image-number {
   display: inline-block;
   float: left;
+  margin-top: 10px;
 }
 
 .image-number:before {
@@ -110,7 +111,7 @@ span {
 .image-caption > span,
 .image-caption > a{
   display: inline-block;
-  margin-top: 9px;
+  margin-top: 13px;
 }
 
 .image-caption {
@@ -120,7 +121,7 @@ span {
 }
 
 
-.authors {
+/*.authors {
   display: inline-block;
   float: right;
 
@@ -133,8 +134,10 @@ span {
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-top: 7px solid rgb(208,208,208);
-  margin-right: 27px;
-}
+  margin-right: 5px;
+  margin-left: 20px;
+  margin-top: 7px;
+}*/
 
 .authors img {
   width: 20px;
@@ -145,6 +148,38 @@ span {
   border-radius: 10%;
 }
 
-li.authors {
-  display: inline;
+.authors {
+  display: inline-block;
+  float: right;
+  margin-right: 5px;
+  margin-left: 20px;
+  margin-top: 7px;
+	position: relative;
+	background: none;
+	border: 4px solid #;
+  content:" "
+}
+.authors:after, .authors:before {
+	top: -45%;
+	left: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.authors:after {
+	border-color: rgba(173, 173, 173, 0);
+	border-top-color: rgb(208,208,208);
+	border-width: 8px;
+	margin-left: -4px;
+
+}
+.authors:before {
+	border-color: rgba(0, 0, 0, 0);
+	border-top-color: #;
+	border-width: 11px;
+	margin-left: -11px;
 }
